--- a/gyuv/CMakeLists.txt
+++ b/gyuv/CMakeLists.txt
@@ -29,7 +29,9 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-        src/main/cpp/gyuv.cpp)
+        src/main/cpp/gyuv.cpp
+        src/main/cpp/gyuvc.cpp
+        )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
