--- a/gyuv/CMakeLists.txt
+++ b/gyuv/CMakeLists.txt
@@ -17,12 +17,12 @@ add_subdirectory(src/main/cpp/libyuv)
 add_library( # Sets the name of the library.
         gyuv
 
-             # Sets the library as a shared library.
-             SHARED
+        # Sets the library as a shared library.
+        SHARED
 
-             # Provides a relative path to your source file(s).
+        # Provides a relative path to your source file(s).
         src/main/cpp/gyuv.cpp
-        src/main/cpp/gyuvconvert.cpp
+        src/main/cpp/yuvc.cpp
         )
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -31,18 +31,15 @@ add_library( # Sets the name of the library.
 # you want to add. CMake verifies that the library exists before
 # completing its build.
 find_library( # Sets the name of the path variable.
-              log-lib
+        log-lib
 
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
-
-
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        log)
 
 
 #
 include_directories(src/main/cpp/libyuv/include)
-
 
 
 # Specifies libraries CMake should link to your target library. You
@@ -50,7 +47,8 @@ include_directories(src/main/cpp/libyuv/include)
 # build script, prebuilt third-party libraries, or system libraries.
 target_link_libraries( # Specifies the target library.
         gyuv
-
-                       # Links the target library to the log library
-                       # included in the NDK.
-                       ${log-lib} )
+        #!!!!!!
+        yuv
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib})
