--- a/gyuv/build.gradle
+++ b/gyuv/build.gradle
@@ -12,9 +12,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        //
         externalNativeBuild {
             cmake {
                 cppFlags ''
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
     }
